Update from class to record in DTOs
